# mle-training

./: .flake8  .gitignore  .pyproject.toml.swp  Dockerfile  README  README.md  env.yml  envv.yml  nonstandardcode.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/source/: conf.py  house_pricing_predictor.rst  index.rst  modules.rst
mlartifacts/527953945965577326/2dcb240d244a4c9892408de79b09554b/artifacts/: housing_test_predictions.npy
mlruns/0/: meta.yaml
mlruns/0/0586a4b98b7240b0ac3a9a1adfb23563/: meta.yaml
mlruns/0/07409352595845629d9765af00720fba/: meta.yaml
mlruns/0/199a5e028b03408fa0e603b4ea3eda8f/: meta.yaml
mlruns/0/2713817535374bd2a4ef3499c5a4e251/: meta.yaml
mlruns/0/2a40949ee8814f5f972aebd34fff88c8/: meta.yaml
mlruns/0/2df167e180e3424e8883517978471443/: meta.yaml
mlruns/0/4e67714fe2264de2b6fedafc3df66dd9/: meta.yaml
mlruns/0/74cd511de15840dc8d2c44a90e4aa4c1/: meta.yaml
mlruns/0/9247a97edb7b4130a61cc43bd457ae4a/: meta.yaml
mlruns/0/a22a03181f2a46b89391922103a54c70/: meta.yaml
mlruns/0/d4d2d2bf965448279bbcd4d3bedc260a/: meta.yaml
mlruns/0/f9748b773b114b679d01202539a0d527/: meta.yaml
mlruns/0/fea999f9c76748b0a06b1fedb862288a/: meta.yaml
mlruns/527953945965577326/: meta.yaml
mlruns/527953945965577326/2b6aca5930d542018243dd9c4ba25728/: meta.yaml
mlruns/527953945965577326/2dcb240d244a4c9892408de79b09554b/: meta.yaml
mlruns/527953945965577326/7ea01dd3fd374507868fa79446a1e1c8/: meta.yaml
mlruns/527953945965577326/85bc6cf5c83044cbb64d98d7aac8481f/: meta.yaml
mlruns/527953945965577326/cc6bc62e3e6543a9878b8d901326acce/: meta.yaml
mlruns/527953945965577326/e0668eceac6b434e8e2054f43b7ebc34/: meta.yaml
mlruns/527953945965577326/e9516296c6334012bab35626073c4355/: meta.yaml
processed_data/: housing_prepared.pkl
scripts/: house_price_predictor.ipynb  ingest_data.py  main_mlflow.py  score.py  train.py
src/HousePricingPredictor/: main.py
src/house_pricing_predictor/: __init__.py  data_ingestion.py  logging_config.py  main.py  model_scoring.py  model_training.py
src/house_pricing_predictor_YUKTHAMAJELLA/: logging_config.py  model_scoring.py
tests/: .main.py.swp  .test_file.py.swp  test_data_ingestion.py  test_file.py  test_scoring.py  test_training.py
tests/installation_test/: test_file.py
tests/unit_test/: test_data_ingestion.py  test_scoring.py  test_training.py
(+35 files in other folders)
